--- a/Css/Account.css
+++ b/Css/Account.css
@@ -27,6 +27,7 @@ hr{
   background-color:#f5f5f6;
   padding-top:80px;
   padding-bottom:80px;
+  height:80vh;
 }
 .input-group-addon{
   background-color:white;
