--- a/Css/Admin-Order-History.css
+++ b/Css/Admin-Order-History.css
@@ -6,7 +6,7 @@
 .row.content {height: 800px;}
 .sidenav{
   background-color: #313942;
-  height: 100%;
+  height: 100vh;
 }
 @media screen and (max-width: 767px) {
   .row.content {height: auto;} 
@@ -36,4 +36,9 @@ tr:nth-child(even){background-color: #f2f2f2}
 }
 h3{
   color:#5e5e5e;
+}
+ul{
+    margin-top:30vh;
+    width: 70%;
+    margin-left:1vw;
 }
