--- a/Css/Admin-Orders.css
+++ b/Css/Admin-Orders.css
@@ -6,7 +6,7 @@
 .row.content {height: 800px;}
 .sidenav{
   background-color: #313942;
-  height: 100%;
+  height: 100vh;
 }
 @media screen and (max-width: 767px) {
   .row.content {height: auto;} 
@@ -30,4 +30,9 @@ th, td {
 tr:nth-child(even){background-color: #f2f2f2}
 .bg-page-title{
   background-color:black;
+}
+ul{
+    margin-top:30vh;
+    width: 70%;
+    margin-left:1vw;
 }
