--- a/Css/Admin-ShippingFee.css
+++ b/Css/Admin-ShippingFee.css
@@ -6,7 +6,7 @@
 .row.content {height: 800px;}
 .sidenav{
   background-color: #313942;
-  height: 100%;
+  height: 100vh;
 }
 @media screen and (max-width: 767px) {
   .row.content {height: auto;} 
@@ -63,4 +63,9 @@ button:focus{
 .btn_add_shipping:focus{
     border: none;
     outline:none;
+}
+ul{
+    margin-top:30vh;
+    width: 70%;
+    margin-left:1vw;
 }
