--- a/Css/Cart.css
+++ b/Css/Cart.css
@@ -47,6 +47,7 @@ html, body{
 	background-color:#f3f3f3;
 	padding-top:40px;
 	padding-bottom:40px;
+	height:100vh;
 }
 footer{
 	background-color:#3a3030;
