--- a/Css/Collection.css
+++ b/Css/Collection.css
@@ -36,6 +36,7 @@ html, body{
 	background-color:#f5f5f6;
 	padding-top:40px;
 	padding-bottom:40px;
+	height:80vh;
 }
 .category{
 	background-color:white;
